--- a/theme.toml
+++ b/theme.toml
@@ -1,12 +1,12 @@
-name = "Simple Hugo Theme"
+name = "plaintxt Theme"
 license = "MIT"
-licenselink = "https://github.com/Xzya/simple-hugo-theme/blob/master/LICENSE.md"
-description = "A very simple and lightweight Hugo Theme inspired by the geniuses behind [bettermotherfuckingwebsite.com](http://bettermotherfuckingwebsite.com/)."
-homepage = "https://github.com/Xzya/simple-hugo-theme"
+licenselink = "https://github.com/defphil/plaintxt-hugo-theme/blob/master/LICENSE.md"
+description = "Brutalist, minimalistic, pure text theme like it's 1999."
+homepage = "https://github.com/defphil/simple-hugo-theme"
 tags = ["blog", "minimal", "clean", "light"]
-features = ["small page size", "fast", "tags", "google analytics", "pagination"]
-min_version = "0.41"
+features = ["small page size", "fast"]
+min_version = "0.40"
 
 [author]
-  name = "Mihail Cristian Dumitru"
-  homepage = "https://github.com/Xzya"
+  name = "Filip Miletic"
+  homepage = "https://github.com/defphil"
